# SImple2dEngine

./: CMakeLists.txt  main.cpp  vcpkg.json  windows.cmake
.github/workflows/: build-win.yaml
include/: anchor_point.hpp  ebo.hpp  engine.hpp  input.hpp  logger.hpp  object.hpp  resource_manager.hpp  shader.hpp  shader_manager.hpp  textbox.hpp  texture.hpp  transform.hpp  vao.hpp  vbo.hpp  window.hpp
include/network/: network.hpp
include/physics/: physics.hpp
scenes/: network_scene.hpp
server/: CMakeLists.txt  main.cpp
shaders/: base-tex.frag  base-tex.vert  base.frag  base.vert
src/: ebo.cpp  engine.cpp  input.cpp  logger.cpp  object.cpp  resource_manager.cpp  shader_manager.cpp  textbox.cpp  texture.cpp  transform.cpp  vao.cpp  vbo.cpp  window.cpp
src/network/: network.cpp
src/physics/: physics.cpp
src/scenes/: demo_scene.cpp  network_scene.cpp
tests/: chart-like.cpp  snail.cpp
